<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">e-Fruit</string>

    <!-- Neutral/General -->
    <string name="general_ok">Okay</string>
    <string name="general_got_it">Got it</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_next_step">Next</string>
    <string name="toast_speech_recognition_not_supported">Speech recognition is not supported in your device.</string>
    <string name="toast_speech_recognition_invalid_action">Invalid action. Try again!</string>
    <string name="validation_length">You can only enter %1$s characters.</string>

    <!-- Main Activity -->
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>
    <!-- ~~~~~~~NAV BAR~~~~~~~ -->
    <string name="drawer_nav_bar_category_general">General</string>
    <string name="drawer_nav_bar_item_home">Home</string>
    <string name="drawer_nav_bar_item_products">Products</string>
    <string name="drawer_nav_bar_item_sales">Sales</string>
    <string name="drawer_nav_bar_item_cart">Cart</string>
    <string name="drawer_nav_bar_category_account">Account</string>
    <string name="drawer_nav_bar_item_my_account">My Account</string>
    <string name="drawer_nav_bar_category_admin">Administration</string>
    <string name="drawer_nav_bar_item_admin_panel">Admin Panel</string>
    <string name="drawer_nav_bar_item_orders">Orders</string>
    <string name="drawer_nav_bar_category_other">Other</string>
    <string name="drawer_nav_bar_item_settings">Settings</string>
    <string name="drawer_nav_bar_item_exit">Exit</string>
    <string name="nav_top_title_speech_recognition">Hi! Tell me what to do.</string>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->

    <!--  Permissions  -->
    <string name="permission_denied">Permission denied.</string>
    <string name="permission_allow_ask_reason">You need to allow necessary permissions for the application to work.</string>
    <string name="permissions_allow_manually">You need to allow necessary permissions in system settings manually.</string>
    <string name="permissions_some_denied">Some permissions are denied.</string>

    <!-- Login Page -->
    <string name="header_sign_in">Sign In</string>
    <string name="button_sign_in_with_google">Continue with a Google account</string>

    <!-- Home Page -->


    <!-- Shops Fragment Page -->
    <string name="recycler_var_shops_zip">Zip: %1$s</string>
    <string name="LOCATION_DISABLED">LOCATION DISABLED</string>

    <!-- Products Fragment Page -->
    <string name="page_products_recycler_add_to_cart">Add to cart</string>
    <string name="page_products_recycler_txt_on_stock">On Stock: </string>
    <string name="page_products_go_to_cart">Go to cart</string>
    <string name="recycler_var_product_price" translatable="false">%1$s €</string>
    <string name="recycler_var_product_price_per_kg" translatable="false">%1$s € / Kg </string>

    <!-- User Profile Page -->
    <string name="page_profile_header1_title">Profile</string>
    <string name="page_profile_input_hint_full_name">Full Name</string>
    <string name="page_profile_input_hint_phone">Phone Number</string>
    <string name="page_profile_input_hint_address">Address</string>
    <string name="page_profile_header2_personal_information">Personal Information</string>
    <string name="page_profile_text_view_sign_out">Sign out</string>
    <string name="validation_full_name">Should contain only letters and not numbers or special characters.</string>
    <string name="validation_digits">Should contain only digits.</string>

    <!-- Shopping Cart Page -->
    <string name="page_cart_header">Shopping Cart</string>
    <string name="page_cart_empty_shopping_cart">Shopping cart is empty! :(</string>
    <string name="page_cart_select_time">Select click-away time</string>
    <string name="page_cart_remove_item">Remove</string>
    <string name="page_cart_items_header">Items</string>
    <string name="page_cart_total_payment_header">Total Payment</string>
    <string name="page_cart_total_payment_number" translatable="false">%1$.2f €</string>

    <!-- Orders Page -->
    <string name="page_orders_no_orders">You don&quot;t have any orders yet.</string>
    <string name="recycler_item_order_date_header">Date:</string>
    <string name="recycler_item_order_shop_name_header">Shop Name:</string>
    <string name="recycler_item_order_products_header">Products:</string>
    <string name="recycler_item_order_grand_total_header">Costs:</string>
    <string name="recycler_item_order_status_header">Status:</string>
    <string name="recycler_item_order_status_completed">Completed</string>
    <string name="recycler_item_order_status_processing">Processing</string>

    <!-- Select Click-Away Time Activity -->
    <string name="page_select_time_header">Select Time</string>
    <string name="page_select_time_header2">Select an available click-away time</string>

    <!-- Pay Activity -->
    <string name="toolbar_payment_title">Payment</string>
    <string name="page_pay_grand_total_header">Grand Total</string>
    <string name="page_pay_credit_card_details">Card Details</string>
    <string name="credit_card_number_hint">Card Number</string>
    <string name="credit_card_security_code_hint">Security Code</string>
    <string name="credit_card_expire_date_hint">Expire Date</string>
    <string name="btn_pay_text">Pay</string>
    <string name="validation_credit_card">Not a valid credit card number.</string>

    <!-- Payment Confirmation Activity -->
    <string name="toolbar_payment_confirmation_title">Payment Confirmation</string>
    <string name="page_payment_confirmation_order_sent">Your order has been sent!</string>
    <string name="btn_page_payment_confirmation_back">Back to home page</string>

    <!-- Settings -->
    <string name="page_settings_header1_title">Settings</string>
    <string name="page_settings_title_general">General</string>
    <string name="page_settings_languages">Language</string>
    <string name="page_settings_title_appearance">Appearance</string>
    <string name="page_settings_dark_mode">Night Mode</string>

    <!-- Version -->
    <string name="app_versionCode">@string/versionName</string>
    <string name="app_versionText">App Version </string>

    <!-- Dialogs -->
    <string name="alert_lang_txt_title">Select language:</string>
    <string name="alert_lang_txt_view_eng">English</string>
    <string name="alert_lang_txt_view_ell">Greek (GR)</string>
    <string name="alert_profile_saved_txt_title">Saved!</string>
    <string name="alert_profile_saved_txt_desc">Your personal information has been updated successfully!</string>
    <string name="alert_shop_warning_txt_title">Warning!</string>
    <string name="alert_shop_warning_txt_desc">You currently have items from another shop inside your cart. You need to remove everything before selecting items from another shop!</string>
    <string name="alert_shop_warning_txt_desc_header2">You are on:</string>
    <string name="alert_date_time_warning_txt_desc">You must select a pickup date and time!</string>

    <!-- Shared Preferences Keys -->
    <string name="switch_night_mode" translatable="false">SWITCH_NIGHT_MODE</string>
    <string name="switch_lang" translatable="false">SWITCH_LANG</string>

    <!-- Content Descriptions -->
    <string name="img_content_desc_fb_btn">Facebook Link</string>
    <string name="img_content_desc_insta_btn">Instagram Link</string>
    <string name="img_content_desc_twitter_btn">Twitter Link</string>
    <string name="img_content_desc_fruits">Fruits Image</string>
    <string name="img_content_desc_e_fruit_banner">eFruit Banner Image</string>
    <string name="img_content_desc_fruit_basket">Fruits Basket Image</string>
    <string name="img_content_desc_back_button">Back Button</string>
    <string name="img_content_desc_mic">Microphone Button</string>
    <string name="img_content_desc_admin_panel">Admin Panel Button</string>
    <string name="img_content_desc_cart">Shopping Cart Button</string>
    <string name="img_content_desc_empty_cart">Empty Cart Image</string>
    <string name="img_content_minus_sign">Minus Button</string>
    <string name="img_content_plus_sign">Plus Button</string>
    <string name="img_content_delete">Remove From Cart Button</string>
    <string name="page_payment_success_header">Order Confirmation</string>
    <string name="general_none_selected">None Selected</string>
</resources>