<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Activities.PayActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_Pay_Top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_Pay_BackButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:src="@drawable/ic_menu_top_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorText"
            android:contentDescription="@string/img_content_desc_back_button" />

        <TextView
            android:id="@+id/textView_Pay_Header"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/toolbar_payment_title"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_Pay_BackButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_Pay_Top"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView_Pay_GrandTotalHeader"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/page_pay_grand_total_header"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/textView_Pay_GrandTotalValue"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_Pay_GrandTotalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/helvetica_bold"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textView_Pay_CardDetailsHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Pay_GrandTotalHeader"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView_Pay_CardDetailsHeader"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/page_pay_credit_card_details"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/inputLayout_Pay_CardNumber"
            app:layout_constraintStart_toStartOf="@+id/inputLayout_Pay_CardNumber" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_Pay_CardNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="264dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInput_Pay_CardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_credit_card"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorText"
                android:hint="@string/credit_card_number_hint"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_Pay_SecurityCode"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout_Pay_CardNumber">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInput_Pay_SecurityCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_top_secret"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorText"
                android:hint="@string/credit_card_security_code_hint"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_Pay_ExpireDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/inputLayout_Pay_SecurityCode"
            app:layout_constraintTop_toTopOf="@+id/inputLayout_Pay_SecurityCode">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInput_Pay_ExpireDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_calendar_filled"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorText"
                android:hint="@string/credit_card_expire_date_hint"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Pay_Pay"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/selector_login_large_button"
            android:fontFamily="@font/helvetica_bold"
            android:gravity="center"
            android:text="@string/btn_pay_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorButtonText"
            android:textSize="18sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout_Pay_ExpireDate"
            app:layout_constraintVertical_bias="0.3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
