<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/action_bar_mic"
                    android:contentDescription="@string/img_content_desc_mic"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="24dp"
                    android:adjustViewBounds="true"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/selector_img_btn_mic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:visibility="invisible"
                    android:id="@+id/action_bar_admin_panel"
                    android:contentDescription="@string/img_content_desc_admin_panel"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_admin_panel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/action_bar_cart"
                    android:contentDescription="@string/img_content_desc_cart"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="24dp"
                    android:adjustViewBounds="true"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/selector_img_btn_cart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/action_bar_circle_img_view_profile"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/action_bar_circle_img_view_profile"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="24dp"
                    android:src="@drawable/ic_account"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/action_bar_mic"
                    app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.Toolbar>