<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="280dp"
    android:layout_gravity="center"
    android:layout_marginLeft="55dp"
    android:layout_marginRight="55dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_alert_layout_bg"
            android:elevation="15dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/textViewAlertProfileSaved_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"
                android:fontFamily="@font/helvetica"
                android:gravity="center"
                android:text="@string/alert_profile_saved_txt_title"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewAlertProfileSaved_Desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/helvetica"
                android:gravity="center"
                android:text="@string/alert_profile_saved_txt_desc"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewAlertProfileSaved_Title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAlertProfileSaved_Ok"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/selector_positive_button"
                android:fontFamily="@font/helvetica_bold"
                android:src="@android:color/transparent"
                android:text="@string/general_ok"
                android:textAllCaps="false"
                android:textColor="@color/colorButtonText"
                android:textSize="16sp"
                app:backgroundTint="@null"
                app:icon="@drawable/ic_checkmark_success"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconTint="@color/colorButtonText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewAlertProfileSaved_Desc" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_alert_success" />
    </FrameLayout>
</FrameLayout>